--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -301,12 +301,10 @@ Article on intangibility of game feel.2025-1-8-DiscussionConclusion
 <!-- NOTE NOT PLAYTESTING THAT IS IMPORTANT HERE - INSTEAD THE ROLE AND NATURE OF GDPS TO AID PROPAGATION -->
 <!-- NOTE THIS includes NON TEMPLATED GDPs? -->
 
-
-
 <!-- While GDPs were often demanded by pairs or individuals, and then in P2 a menu of suggested GDPs introduced by had a role, there is a community dimension in the way participants worked with the concepts and the concrete implementation of GDPs.   -->
 <!-- In addition to the names of patterns as a lingua franca to comment on games during the process of playtesting, participants also    -->
 
-Within the emerging idioculture of the game making sessions, and during playtesting in particular, the implementation of particular GDPs by participant pairs or individuals often spread through peer activity. Both documented (those part of provided resources) and novel GDPs (those introduced by participants) were transmitted between participants enriching the games of participants. At times participant were influenced by playing the games of others and at times they would request the direct help of peers to implement GDPs in their own games. In part two of Vignette 1, Toby's work adding 21 levels to his game is noticed by Bertie.
+Within the emerging idioculture of the game making sessions, and during playtesting in particular, the implementation of popular or novel GDPs by participant pairs or individuals is often spread through peer activity. Both documented (those part of provided resources) and novel GDPs (those introduced by participants) were transmitted between participants enriching the games of participants. At times participant were influenced by playing the games of others and at times they would request the direct help of peers to implement GDPs in their own games. In part two of Vignette 1, Toby's work adding 21 levels to his game is noticed by Bertie.
 
    Bertie: Why’s that enemy in every level
    Toby: He’s not.
@@ -323,15 +321,12 @@ Within the emerging idioculture of the game making sessions, and during playtest
    Toby: (To someone else  calling for attention)  No I’m helping Bertie.
    _(Toby then follows Bertie to his workstation to help him implement more levels.)_
 
-**Analysis:** This exchange shows the propagation of GDPs emerging FROM community playtesting very direct with the one asking another to help them directly. It is possible that Bertie's request to Toby is facilitated through noticed Toby helping Nadine and Harper add levels to their games. Toby's emerging roles as a specialist that the community can draw on for practical help, and similar examples (see also that of Nadine in Vignette 5), were welcome as a way to reduce dependence on myself as a facilitator, or to provide an alternative to the instruction-based support documents.
+**Analysis:** This exchange shows the propagation of GDPs emerging from the process of community playtesting through a direct request. It is possible that Bertie's request to Toby is prompted through Bertie noticing Toby helping Nadine and Harper add levels to their games. Toby's emerging roles as a specialist that the community can draw on for practical help, and similar examples (see also that of Nadine in Vignette 5), were welcome as a way to reduce dependence on myself as a facilitator, or to provide an alternative to the instruction-based support documents.
 
-
-
-EVIDENCE? PRESENCE / FREQUENCY?  
+<!-- EVIDENCE? PRESENCE / FREQUENCY?   -->
+<!-- NOTE ADD MORE EVIDENCE? -->
 
 Other examples of propagating patterns include placing hazards in tricky places like a lava pit, the use of moving enemies and changes to jump dynamics.
-
-<!-- NOTE ADD MORE EVIDENCE? -->
 
 
 
@@ -351,9 +346,7 @@ DEVELOP
 These novelties may emerge spontaneously or have a source in  part participants' funds of gaming knowledge. In either case once the concept of safe zone or bonus level enters the linguistic and coding repertoire of this community of game makers, they may spread if other participants pick up on them. Even if other participants only noticed the use of GDPs and use approximate terminology to comment on them during playtesting, this form of activity can be seen as legitimate peripheral participation [@lave_situated_1991; @guzdial_imagineering_2006], and thus a helpful practice contributing to the emerging ecosystems of the learning community.
 
 
-<!-- ### Summary of cultural section - and signposting to next chapter -->
-
-**synthesis of this section**
+<!-- **synthesis of this section** -->
 
 This section has explored the use of GDPs as within strategies and processes that occur at a community level in way which demonstrate the transfer between different activity systems in a way which supports the perspective of Gutiérrez [@gutierrez_developing_2008] regarding the importance of transcending borders and linguistic practices between sites of learning. Playtesting a medium for an a shared idioculture to emerge and as such became a significant part of pedagogy of the learning design. While the design processes directly linked implementing GDPs were one of the most significant in video data others were present. The role of playtesting and other community interactions including warm up games, session reflections are explored in relation to the development of agency in the following chapter.
 
@@ -439,9 +432,9 @@ However, to overcome scarcity of facilitator support, direct help processes were
 This section prioritises describing the code patching process using examples and guided instructions rather than the first principles.   -->
 
 
-### GDPs used to scaffold ideation and organisation processes (800)
+### GDPs used to scaffold ideation processes (800)
 
-**GDPs are used in a variety of ways to guide the ideation process via restriction of choice in pattern collection, starting template includes core dynamics, visual code structures of GDPs suit rapid prototyping.**
+**GDP concepts can guide ideation processes in diverse ways including the use of visual code structures, and experimentation with core dynamics via rapid prototyping techniques.**
 
 The design chapter explored the tension between reduced choice of genre of game. In my journal notes and observations of the games created, I note that the provision of a graphical menu of GDPs significantly decreased in time spend in ideation phase by providing scaffolding and a restriction of choice. Analysis of participant use of the menu as detailed in the documentation section above Toby supports this analysis. Other techniques that leveraged the characteristics of game design patterns to support the ideation process emerged in community design activities.
 
@@ -532,7 +525,7 @@ NOTE - TO DEVELOP AFTER MORE ANALYSIS OF VIDEO DATA.
 The use of GDPs to scaffold the ideation process was a common pattern used by X of the Y sessions analysed.
 
 
-### GDPs aiding the process of organisation and division of labour (1400)
+### GDPs aiding the process of division of labour (1400)
 
 <!-- NOTE - DIVISION OF LABOUR IS IN THE NEXT CHAPTER TOO - REWRITE BASED ON GDP ONLY CONTENT
 CHECK FOR OVERLAP-->
@@ -681,6 +674,8 @@ Once the code for the new game mechanic has been added, the child is guided to t
 <!-- EDIT DOWN ALREADY COVERED IN CHAP 5? -->
 
 Turning from the division of labour to how GDPs interact with the development of use of technical processes in game making.
+
+The implementation of GDPs can stimulate participants to adopt or to share technical processes.
 
 SUMMARISE HOW
 
